<resources>
    <string name="app_name">DevHack</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="programs_or_workshop">Programas o workshop</string>
    <string name="Work_offers">Ofertas de trabajo</string>
    <string name="contact">Contáctanos</string>
    <string name="contact_us">¡Contáctanos!</string>

    <string name="admira_ini">¡</string>
    <string name="admira_fin">!</string>

    <string name="cell_phone_number">316 871 1557</string>
    <string name="e_mail">hola@devhack.co</string>
    <string name="location">Cali, Colombia</string>
    <string name="sign_up">Registrate</string>
    <string name="what_is_your_name">Cuál es tu nombre?</string>
    <string name="email_read_user">El correo en el que nos leerás?</string>
    <string name="user_contact_number">Número al que nos podamos contactar?</string>
    <string name="send">Enviar</string>
    <string name="email_address">Email</string>
    <string name="password">Contraseña</string>
    <string name="enter">Ingresar</string>
    <string name="company">Empresa:</string>
    <string name="task">Cargo:</string>
    <string name="view_contact_data">Ver datos de contacto</string>
    <string name="email">Email</string>
    <string name="cell_phone">Celular:</string>
    <string name="modality">Modalidad:</string>
    <string name="date">Fecha:</string>
    <string name="city">Ciudad:</string>
    <string name="start_session">Iniciar Seción</string>
    <string name="to_accept">Aceptar</string>
    <string name="is_required">Es requerido</string>
    <string name="succesfull_login">Usted inicio sesión correctamente</string>
    <string name="succesfull_signup">Usted se ha registrado con exito</string>

</resources>
